feat: adição de logging e tratamento de exceções no AuthController e AuthService; implementação de construtores no DTOs e ajustes nas mensagens de validação; melhorias na configuração de segurança e no filtro de autenticação JWT